new password request works

--- a/phenology-frontend/src/app/page/forgot-password/forgot-password.component.html
+++ b/phenology-frontend/src/app/page/forgot-password/forgot-password.component.html
@@ -19,7 +19,7 @@
           />
         </div>
         <button type="submit" class="btn btn-primary m-2">OK</button>
-        <button type="button" class="btn btn-primary m-2">Mégsem</button>
+        <button type="button" class="btn btn-primary m-2" (click)="onCancel()">Mégsem</button>
       </form>
       <p>{{ email }}</p>
     </div>
