--- a/phenology-frontend/src/app/page/login/login.component.html
+++ b/phenology-frontend/src/app/page/login/login.component.html
@@ -1,3 +1,13 @@
+<h1>Bejelentkezés</h1>
+<br>
+<h3>
+  Új megfigyelés rögzítéséhez kérjük jelentkezzen be.
+  <br>
+  <br>
+  Amennyiben még nem regisztrált portálunkon, egy név, email cím és
+  jelszó megadásával csatlakozhat a megfigyelők csapatához.
+</h3>
+
 <!-- <button (click)="setPassword()" class="btn btn-success">
   Set Password
 </button> -->
@@ -15,7 +25,7 @@
         <input class="form-control" name="password" [(ngModel)]="user.password" type="password">
       </div>
       <button type="submit" class="btn btn-primary col-12 my-3">
-        <i class="fa fa-sign-in"></i>
+        Bejelentkezés
       </button>
       <a routerLink="../register" class="btn btn-link">Regisztráció</a>
       <a routerLink="../forgotPassword" class="btn btn-link">Elfelejtett jelszó</a>
