--- a/phenology-frontend/src/app/page/reset-password/reset-password.component.html
+++ b/phenology-frontend/src/app/page/reset-password/reset-password.component.html
@@ -3,8 +3,8 @@
   <div *ngIf="resetPasswordStatus === ''">
     <div class="card-body">
       <form [formGroup]="form" (ngSubmit)="onSubmit()">
-        <div class="form-group">
 
+        <div class="form-group">
           <label for="password">Új jelszó</label>
           <input
             type="password"
@@ -59,22 +59,30 @@
               *ngIf="loading"
               class="spinner-border spinner-border-sm mr-1"
             ></span>
-            Regisztráció
+            Rendben
           </button>
-          <a routerLink="'/'" class="btn btn-link">Mégsem</a>
+          <button type="button" class="btn btn-primary m-2" (click)="onCancel()">Mégsem</button>
         </div>
       </form>
     </div>
   </div>
 
-  <div *ngIf="resetPasswordStatus" class="m-3">
-    <h3 class="m-2">Sikeres regisztráció</h3>
-    <h5 class="m-2">Még egy utolsó lépés: <br>
-      a megadott email címre küldtünk egy levelet, melyben a
-      linkre kattintva aktiválódik a regisztrációja. Köszönjük!
-     </h5>
+
+  <div *ngIf="resetPasswordStatus === 'success'" class="m-3">
+    <h3 class="m-2">Az új jelszó beállítása sikerült</h3>
+    <h5 class="m-2">
+      Új megfigyelés rögzítéséhez kérjük
+      <a routerLink="../../../login">jelentkezzen be</a>! Köszönjük.
+    </h5>
   </div>
 
+  <div *ngIf="resetPasswordStatus === 'failed'" class="m-3">
+    <h3 class="m-2">Az új jelszó beállítása nem sikerült</h3>
+    <h5 class="m-2">
+      Az emailben kapott link érvényessége biztonsági okokból lejárt.
+      <br>
+      Kérjük igényeljen
+      <a routerLink="../../../forgotPassword" class="btn btn-link">új jelszót</a>
+    </h5>
+  </div>
 </div>
-
-
