--- a/phenology-frontend/src/app/common/navigation/navigation.component.html
+++ b/phenology-frontend/src/app/common/navigation/navigation.component.html
@@ -21,14 +21,14 @@
   </form> -->
 
   <div class="text-white">
-    <div *ngIf="(currentUser$ | async) as currentuser" class="sb-sidenav-footer">
-      <div class="small text-white">Logged in as: {{currentuser.firstName}} {{currentuser.lastName}}</div>
+    <div *ngIf="(userFirstName) as currentuser" class="sb-sidenav-footer">
+      <div class="small text-white">Logged in as: {{userFirstName}} {{userLastName}}</div>
     </div>
   </div>
 
   <!-- Navbar-->
   <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
-      <li *ngIf="user$ | async" class="nav-item dropdown">
+      <li *ngIf="userFirstName" class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa fa-user fa-fw"></i></a>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" [href]="'/profile'">Profil</a></li>
@@ -37,7 +37,7 @@
               <li><a class="dropdown-item" (click)="onLogout()">Kijelentkezés</a></li>
           </ul>
       </li>
-      <button routerLink="/login" *ngIf="!(user$ | async)" class="btn btn-success">
+      <button routerLink="/login" *ngIf="!(userFirstName)" class="btn btn-success">
         <i class="fa fa-sign-in"></i>
       </button>
   </ul>
