authentication, observation, profile

--- a/phenology-frontend/src/app/page/home/home.component.scss
+++ b/phenology-frontend/src/app/page/home/home.component.scss
@@ -1,9 +1,11 @@
 .main_header {
-  font-size: 6rem;
+  //font-size: 6rem;
   color: darkgreen;
+  font-size: 8vw;
 }
 
 .header {
-  font-size: 2rem;
+  //font-size: 2rem;
   color: darkgreen;
+  font-size: 3vw;
 }
