--- a/phenology-frontend/src/app/common/navigation/navigation.component.html
+++ b/phenology-frontend/src/app/common/navigation/navigation.component.html
@@ -1,8 +1,14 @@
 <nav class="sb-topnav navbar navbar-expand">
   <!-- Navbar Brand-->
-  <a class="navbar-brand ps-3 text-white" routerLink="/"><img src="../../../assets/image/logo2.png" alt="" width="50px"></a>
-  <a class="navbar-brand ps-3 text-white" routerLink="/"><strong>Növényfenológia</strong></a>
+  <a class="navbar-brand ps-3 text-white" routerLink="/"
+    ><img src="../../../assets/image/logo2.png" alt="" width="50px"
+  /></a>
+  <a class="navbar-brand ps-3 text-white" routerLink="/"
+    ><strong>Növényfenológia</strong></a
+  >
+
   <a routerLink="/observation" class="nav-link text-white">Új megfigyelés</a>
+
   <a routerLink="/data" class="nav-link text-white">Megfigyelések</a>
   <a routerLink="/article" class="nav-link text-white">Cikkek</a>
   <a routerLink="/history" class="nav-link text-white">Történet</a>
@@ -10,7 +16,13 @@
   <a routerLink="/plant" class="nav-link text-white">Növények</a>
 
   <!-- Sidebar Toggle-->
-  <button class="btn btn-link btn-sm text-white order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fa fa-bars"></i></button>
+  <button
+    class="btn btn-link btn-sm text-white order-1 order-lg-0 me-4 me-lg-0"
+    id="sidebarToggle"
+    href="#!"
+  >
+    <i class="fa fa-bars"></i>
+  </button>
 
   <!-- Navbar Search
   <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
@@ -21,24 +33,37 @@
   </form> -->
 
   <div class="text-white">
-    <div *ngIf="(userFirstName) as currentuser" class="sb-sidenav-footer">
-      <div class="small text-white">Logged in as: {{userFirstName}} {{userLastName}}</div>
+    <div *ngIf="userFirstName" class="sb-sidenav-footer">
+      <div class="small text-white">
+        Bejelentkezve, mint: {{ userFirstName }} {{ userLastName }}
+      </div>
     </div>
   </div>
 
   <!-- Navbar-->
   <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
-      <li *ngIf="userFirstName" class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa fa-user fa-fw"></i></a>
-          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" [href]="'/profile'">Profil</a></li>
-              <!-- <li><a class="dropdown-item" href="#!">Activity Log</a></li> -->
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" (click)="onLogout()">Kijelentkezés</a></li>
-          </ul>
-      </li>
-      <button routerLink="/login" *ngIf="!(userFirstName)" class="btn btn-success">
-        <i class="fa fa-sign-in"></i>
-      </button>
+    <li *ngIf="userFirstName" class="nav-item dropdown">
+      <a
+        class="nav-link dropdown-toggle text-white"
+        id="navbarDropdown"
+        href="#"
+        role="button"
+        data-bs-toggle="dropdown"
+        aria-expanded="false"
+        ><i class="fa fa-user fa-fw"></i
+      ></a>
+      <ul
+        class="dropdown-menu dropdown-menu-end"
+        aria-labelledby="navbarDropdown"
+      >
+        <li><a class="dropdown-item" routerLink="/profile">Profil</a></li>
+        <!-- <li><a class="dropdown-item" href="#!">Activity Log</a></li> -->
+        <li><hr class="dropdown-divider" /></li>
+        <li><a class="dropdown-item" (click)="onLogout()">Kijelentkezés</a></li>
+      </ul>
+    </li>
+    <button routerLink="/login" *ngIf="!userFirstName" class="btn btn-success">
+      <i class="fa fa-sign-in"></i>
+    </button>
   </ul>
 </nav>
