--- a/phenology-frontend/src/app/page/observed-datas/observed-datas.component.html
+++ b/phenology-frontend/src/app/page/observed-datas/observed-datas.component.html
@@ -1,6 +1,5 @@
-<div *ngIf="(observedData$ | async) as observations" class="col-10 offset-1">
-
-    <table class="table">
+<div *ngIf="observedData$ | async as observations" class="col-10 offset-1">
+  <table class="table">
     <thead>
       <tr>
         <th>Dátum</th>
@@ -13,13 +12,27 @@
     <tbody>
       <tr *ngFor="let observation of observations">
         <td>{{ observation.date }}</td>
-        <td>{{ observation.user.firstName }} {{ observation.user.lastName }}</td>
+        <td>
+          {{ observation.user.firstName }} {{ observation.user.lastName }}
+        </td>
         <td>{{ observation.location }}</td>
         <td>{{ observation.plant.name }}</td>
         <td>{{ observation.phase }}</td>
+        <td *ngIf="observation.photo">
+          "{{ backendImageURL }}{{observation.photo[0]}}"
+          <img
+            src="{{ backendImageURL }}{{observation.photo[0]}}"
+            class=""
+            alt="nincs meg a kép"
+          />
+        </td>
       </tr>
     </tbody>
   </table>
 
-  </div>
-
+  <img
+            src="{{ backendImageURL }}1648454401758.jpg"
+            class=""
+            alt="nincs meg a kép"
+          />
+</div>
