--- a/phenology-frontend/src/app/page/home/home.component.scss
+++ b/phenology-frontend/src/app/page/home/home.component.scss
@@ -9,3 +9,24 @@
   color: darkgreen;
   font-size: 3vw;
 }
+
+// cookie
+
+.container {
+  padding: 2rem 0rem;
+}
+
+.modal-dialog {
+  margin-top: 0rem;
+  max-width: 100%;
+
+  .modal-content {
+    border-radius: 0rem;
+  }
+
+  .buttons {
+    .btn {
+      margin: 0.2rem;
+    }
+  }
+}
