--- a/phenology-frontend/src/app/page/observed-datas/observed-datas.component.html
+++ b/phenology-frontend/src/app/page/observed-datas/observed-datas.component.html
@@ -1,5 +1,87 @@
 <div *ngIf="observedData$ | async as observations" class="col-10 offset-1">
-  <table class="table">
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Dátum</th>
+        <th>Megfigyelő</th>
+        <th>Helyszín</th>
+        <th>Növény</th>
+        <th>Fenofázis</th>
+        <th>Fényképek</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr
+        *ngFor="
+          let observation of observations
+            | paginate: { itemsPerPage: 10, currentPage: p }
+        "
+      >
+        <td>{{ observation.date }}</td>
+        <td>
+          {{ observation.user.firstName }} {{ observation.user.lastName }}
+        </td>
+        <td>{{ observation.location }}</td>
+        <td>{{ observation.plant.name }}</td>
+        <td>{{ observation.phase }}</td>
+        <td *ngIf="observation.photo as photos">
+          <div>
+            <td *ngFor="let photo of photos">
+              <img
+                src="{{ backendImageURL }}{{ photo }}"
+                class="myImg"
+                alt="nincs meg a kép"
+                style="width: 100px"
+                (click)="photoEnlarge(backendImageURL + photo)"
+              />
+
+              <!-- Modal -->
+              <div
+                id="myModal"
+                class="modal"
+                [style.display]="modalStyleDisplay"
+              >
+                <span class="close" (click)="closePhoto()">&times;</span>
+                <img
+                  class="modal-content"
+                  id="img01"
+                  [src]="modalImgageSource"
+                />
+                <div id="caption"></div>
+              </div>
+            </td>
+          </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <div class="mx-auto">
+    <style>
+      .my-pagination /deep/ .ngx-pagination .current {
+        background: darkgreen;
+      }
+    </style>
+    <pagination-controls
+      class="my-pagination"
+      (pageChange)="p = $event"
+      previousLabel="Előző"
+      nextLabel="Következő"
+    ></pagination-controls>
+  </div>
+</div>
+
+<!--
+
+
+<div class="has-text-centered">
+  <div class="spinner" [ngClass]="{ 'hidden': !loading }"></div>
+  <pagination-controls (pageChange)="getPage($event)" id="server"></pagination-controls>
+</div>
+
+
+
+<div *ngIf="observedData$ | async as observations" class="col-10 offset-1">
+  <table class="table table-striped">
     <thead>
       <tr>
         <th>Dátum</th>
@@ -26,11 +108,11 @@
                 src="{{ backendImageURL }}{{ photo }}"
                 class="myImg"
                 alt="nincs meg a kép"
-                style="width: 100%"
+                style="width: 100px"
                 (click)="photoEnlarge(backendImageURL + photo)"
               />
 
-              <!-- Modal -->
+
               <div
                 id="myModal"
                 class="modal"
@@ -52,3 +134,4 @@
     </tbody>
   </table>
 </div>
+-->
