--- a/phenology-frontend/src/app/common/navigation/navigation.component.scss
+++ b/phenology-frontend/src/app/common/navigation/navigation.component.scss
@@ -1,3 +1,8 @@
-.navbar {
+.navbar, .dropdown-menu {
   background-color: darkgreen;
+}
+
+.dropdown-menu > li > a:hover {
+    background-image: none;
+    background-color: lightgreen;
 }
