--- a/phenology-frontend/src/app/common/navigation/navigation.component.html
+++ b/phenology-frontend/src/app/common/navigation/navigation.component.html
@@ -1,69 +1,122 @@
-<nav class="sb-topnav navbar navbar-expand">
-  <!-- Navbar Brand-->
-  <a class="navbar-brand ps-3 text-white" routerLink="/"
-    ><img src="../../../assets/image/logo2.png" alt="" width="50px"
-  /></a>
-  <a class="navbar-brand ps-3 text-white" routerLink="/"
-    ><strong>Növényfenológia</strong></a
-  >
+<nav class="navbar navbar-expand-lg sticky-top">
+  <div class="container-fluid">
+    <!-- Navbar Brand-->
+    <a class="navbar-brand ps-3 text-white" routerLink="/"
+      ><img
+        src="../../../assets/image/logo2.png"
+        alt=""
+        width="30px"
+        class="me-2"
+      />
+      <strong>Növényfenológia</strong>
+    </a>
+    <div class="">
+      <button
+        class="navbar-toggler text-white"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarTogglerDemo02"
+        aria-controls="navbarTogglerDemo02"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <i class="fa fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-  <a routerLink="/observation" class="nav-link text-white">Új megfigyelés</a>
+          <li class="nav-item">
+            <a
+              class="nav-link active text-white me-3"
+              aria-current="page"
+              href="/observation"
+              >Új megfigyelés</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link active text-white me-3"
+              aria-current="page"
+              href="/data"
+              >Megfigyelések</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link active text-white me-3"
+              aria-current="page"
+              href="/article"
+              >Cikkek</a
+            >
+          </li>
 
-  <a routerLink="/data" class="nav-link text-white">Megfigyelések</a>
-  <a routerLink="/article" class="nav-link text-white">Cikkek</a>
-  <a routerLink="/history" class="nav-link text-white">Történet</a>
-  <a routerLink="/guide" class="nav-link text-white">Útmutató</a>
-  <a routerLink="/plant" class="nav-link text-white">Növények</a>
+          <li class="nav-item dropdown me-3">
+            <a
+              class="nav-link dropdown-toggle text-white"
+              href="#"
+              id="navbarScrollingDropdown"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Útmutató
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarScrollingDropdown">
+              <li>
+                <a class="dropdown-item text-white" href="/history"
+                  >A növényfenológia története és jelentősége</a
+                >
+              </li>
+              <li>
+                <a class="dropdown-item text-white" href="/guide"
+                  >Megfigyelési útmutató</a
+                >
+              </li>
+              <li>
+                <a class="dropdown-item text-white" href="/plant"
+                  >Növények leírása</a
+                >
+              </li>
+            </ul>
+          </li>
 
-  <!-- Sidebar Toggle-->
-  <button
-    class="btn btn-link btn-sm text-white order-1 order-lg-0 me-4 me-lg-0"
-    id="sidebarToggle"
-    href="#!"
-  >
-    <i class="fa fa-bars"></i>
-  </button>
+          <li *ngIf="userFirstName"><hr class="dropdown-divider text-white" /></li>
+          <li *ngIf="userFirstName" class="text-white">
+            Üdvözlünk: {{ userFirstName }} {{ userLastName }}
+          </li>
 
-  <!-- Navbar Search
-  <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
-      <div class="input-group">
-          <input class="form-control" type="text" placeholder="Search for..." aria-label="Search for..." aria-describedby="btnNavbarSearch" />
-          <button class="btn btn-primary" id="btnNavbarSearch" type="button"><i class="fas fa-search"></i></button>
-      </div>
-  </form> -->
-
-  <div class="text-white">
-    <div *ngIf="userFirstName" class="sb-sidenav-footer">
-      <div class="small text-white">
-        Bejelentkezve, mint: {{ userFirstName }} {{ userLastName }}
+          <li *ngIf="userFirstName" class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle text-white"
+              href="#"
+              id="navbarScrollingDropdown"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              <i class="fa fa-user"></i>
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarScrollingDropdown">
+              <li>
+                <a class="dropdown-item text-white" href="/profile">Profil</a>
+              </li>
+              <li>
+                <a class="dropdown-item text-white" href="/">Megfigyeléseim</a>
+              </li>
+              <!-- <li><a class="dropdown-item" href="#!">Activity Log</a></li> -->
+              <li><hr class="dropdown-divider text-white" /></li>
+              <li>
+                <a class="dropdown-item text-white" (click)="onLogout()"
+                  >Kijelentkezés</a
+                >
+              </li>
+            </ul>
+          </li>
+        </ul>
       </div>
     </div>
-  </div>
-
-  <!-- Navbar-->
-  <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
-    <li *ngIf="userFirstName" class="nav-item dropdown">
-      <a
-        class="nav-link dropdown-toggle text-white"
-        id="navbarDropdown"
-        href="#"
-        role="button"
-        data-bs-toggle="dropdown"
-        aria-expanded="false"
-        ><i class="fa fa-user fa-fw"></i
-      ></a>
-      <ul
-        class="dropdown-menu dropdown-menu-end"
-        aria-labelledby="navbarDropdown"
-      >
-        <li><a class="dropdown-item" routerLink="/profile">Profil</a></li>
-        <!-- <li><a class="dropdown-item" href="#!">Activity Log</a></li> -->
-        <li><hr class="dropdown-divider" /></li>
-        <li><a class="dropdown-item" (click)="onLogout()">Kijelentkezés</a></li>
-      </ul>
-    </li>
     <button routerLink="/login" *ngIf="!userFirstName" class="btn btn-success">
       <i class="fa fa-sign-in"></i>
     </button>
-  </ul>
+  </div>
 </nav>
