--- a/phenology-frontend/src/app/page/observed-datas/observed-datas.component.html
+++ b/phenology-frontend/src/app/page/observed-datas/observed-datas.component.html
@@ -1,75 +1,83 @@
 <div *ngIf="observedData$ | async as observations" class="col-10 offset-1">
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th>Dátum</th>
-        <th>Megfigyelő</th>
-        <th>Helyszín</th>
-        <th>Növény</th>
-        <th>Fenofázis</th>
-        <th>Fényképek</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr
-        *ngFor="
-          let observation of observations
-            | paginate: { itemsPerPage: 10, currentPage: p }
-        "
-      >
-        <td>{{ observation.date }}</td>
-        <td>
-          {{ observation.user.firstName }} {{ observation.user.lastName }}
-        </td>
-        <td>{{ observation.location }}</td>
-        <td>{{ observation.plant.name }}</td>
-        <td>{{ observation.phase }}</td>
-        <td *ngIf="observation.photo as photos">
-          <div>
-            <td *ngFor="let photo of photos">
-              <img
-                src="{{ backendImageURL }}{{ photo }}"
-                class="myImg"
-                alt="nincs meg a kép"
-                style="width: 100px"
-                (click)="photoEnlarge(backendImageURL + photo)"
-              />
+  <div *ngIf="plantData$ | async as plants">
 
-              <!-- Modal -->
-              <div
-                id="myModal"
-                class="modal"
-                [style.display]="modalStyleDisplay"
-              >
-                <span class="close" (click)="closePhoto()">&times;</span>
+    <select name="plantSelection" id="" [(ngModel)]="selectedPlant">
+      <option *ngFor="let plant of plants" [value]="plant.name">
+        {{ plant.name }}
+      </option>
+    </select>
+
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Dátum</th>
+          <th>Megfigyelő</th>
+          <th>Helyszín</th>
+          <th>Növény</th>
+          <th>Fenofázis</th>
+          <th>Fényképek</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr
+          *ngFor="
+            let observation of observations
+              | paginate: { itemsPerPage: 10, currentPage: p }
+          "
+        >
+          <td>{{ observation.date | date:"yyyy. MM. dd." }}</td>
+          <td>
+            {{ observation.user.firstName }} {{ observation.user.lastName }}
+          </td>
+          <td>{{ observation.location }}</td>
+          <td>{{ observation.plant.name }}</td>
+          <td>{{ observation.phase }}</td>
+          <td *ngIf="observation.photo as photos">
+            <div>
+              <td *ngFor="let photo of photos">
                 <img
-                  class="modal-content"
-                  id="img01"
-                  [src]="modalImgageSource"
+                  src="{{ backendImageURL }}{{ photo }}"
+                  class="myImg"
+                  alt="nincs meg a kép"
+                  style="width: 100px"
+                  (click)="photoEnlarge(backendImageURL + photo)"
                 />
-                <div id="caption"></div>
-              </div>
-            </td>
-          </div>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-  <div class="mx-auto">
-    <style>
-      .my-pagination /deep/ .ngx-pagination .current {
-        background: darkgreen;
-      }
-    </style>
-    <pagination-controls
-      class="my-pagination"
-      (pageChange)="p = $event"
-      previousLabel="Előző"
-      nextLabel="Következő"
-    ></pagination-controls>
+
+                <!-- Modal -->
+                <div
+                  id="myModal"
+                  class="modal"
+                  [style.display]="modalStyleDisplay"
+                >
+                  <span class="close" (click)="closePhoto()">&times;</span>
+                  <img
+                    class="modal-content"
+                    id="img01"
+                    [src]="modalImgageSource"
+                  />
+                  <div id="caption"></div>
+                </div>
+              </td>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <div class="mx-auto">
+      <style>
+        .my-pagination /deep/ .ngx-pagination .current {
+          background: darkgreen;
+        }
+      </style>
+      <pagination-controls
+        class="my-pagination"
+        (pageChange)="p = $event"
+        previousLabel="Előző"
+        nextLabel="Következő"
+      ></pagination-controls>
+    </div>
   </div>
 </div>
-
 <!--
 
 
