--- a/phenology-frontend/src/app/common/navigation/navigation.component.html
+++ b/phenology-frontend/src/app/common/navigation/navigation.component.html
@@ -81,7 +81,7 @@
           </li>
 
           <li *ngIf="userFirstName"><hr class="dropdown-divider text-white" /></li>
-          <li *ngIf="userFirstName" class="text-white">
+          <li *ngIf="userFirstName" class="text-white ms-0 ms-lg-5">
             Üdvözlünk: {{ userFirstName }} {{ userLastName }}
           </li>
 
