--- a/phenology-frontend/src/app/page/history/history.component.html
+++ b/phenology-frontend/src/app/page/history/history.component.html
@@ -1,7 +1,7 @@
 <div class="mt-5">
   <div class="container">
     <h1 class="p-3 bg-success text-light rounded shadow-lg">A növényfenológia jelentősége</h1>
-
+    <div class="fixed-bg"></div>
     <p class="mt-3">
       Az éghajlat a meteorológiai elemek sokaságának statisztikai elemzése révén
       írható le, viszont a növények életciklusának alakulása, valamint a növényi
