myObservations - send request

--- a/phenology-frontend/src/app/common/navigation/navigation.component.html
+++ b/phenology-frontend/src/app/common/navigation/navigation.component.html
@@ -29,7 +29,7 @@
             <a
               class="nav-link active text-white me-3"
               aria-current="page"
-              href="/observation"
+              routerLink="/observation"
               >Új megfigyelés</a
             >
           </li>
@@ -37,7 +37,7 @@
             <a
               class="nav-link active text-white me-3"
               aria-current="page"
-              href="/data"
+              routerLink="/data"
               >Megfigyelések</a
             >
           </li>
@@ -45,7 +45,7 @@
             <a
               class="nav-link active text-white me-3"
               aria-current="page"
-              href="/article"
+              routerLink="/article"
               >Cikkek</a
             >
           </li>
@@ -63,17 +63,17 @@
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarScrollingDropdown">
               <li>
-                <a class="dropdown-item text-white" href="/history"
+                <a class="dropdown-item text-white" routerLink="/history"
                   >A növényfenológia története és jelentősége</a
                 >
               </li>
               <li>
-                <a class="dropdown-item text-white" href="/guide"
+                <a class="dropdown-item text-white" routerLink="/guide"
                   >Megfigyelési útmutató</a
                 >
               </li>
               <li>
-                <a class="dropdown-item text-white" href="/plant"
+                <a class="dropdown-item text-white" routerLink="/plant"
                   >Növények leírása</a
                 >
               </li>
@@ -98,10 +98,10 @@
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarScrollingDropdown">
               <li>
-                <a class="dropdown-item text-white" href="/profile">Profil</a>
+                <a class="dropdown-item text-white" routerLink="/profile">Profil</a>
               </li>
               <li>
-                <a class="dropdown-item text-white" href="/">Megfigyeléseim</a>
+                <a class="dropdown-item text-white" routerLink="/myobservations">Megfigyeléseim</a>
               </li>
               <!-- <li><a class="dropdown-item" href="#!">Activity Log</a></li> -->
               <li><hr class="dropdown-divider text-white" /></li>
