--- a/phenology-frontend/src/app/page/profile/profile.component.html
+++ b/phenology-frontend/src/app/page/profile/profile.component.html
@@ -140,7 +140,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h4 class="modal-title" id="staticBackdropLabel">
-              Biztos hogy törölni szeretné a profilját?
+              Biztos, hogy törölni szeretné a profilját?
             </h4>
             <button
               type="button"
