--- a/phenology-frontend/src/app/page/observation-datas/observation-datas.component.html
+++ b/phenology-frontend/src/app/page/observation-datas/observation-datas.component.html
@@ -1,36 +1,41 @@
 <div *ngIf="signedin">
-  <div class="container text-white p-3">
+  <div class="container p-3">
     <div class="row">
-      <h3 class="py-2">Új megfigyelés rögzítése</h3>
+      <h2 class="m-2 text-center">Új megfigyelés rögzítése</h2>
       <form #observationForm="ngForm" (ngSubmit)="save()">
-        <div class="form-group mt-3">
-          <label for="">Időpont</label>
+        <div class="form-group mt-5 col-4">
+          <label class="mb-1 subtitle" for="">Dátum*</label>
           <input
             name="date"
             [(ngModel)]="observation.date"
             type="date"
-            class="form-control"
+            class="form-control shadow mb-2"
+            max="{{ maxDate }}"
             required
           />
         </div>
 
-        <div class="form-group mt-3">
-          <label for="">Hely</label>
+        <div class="form-group mt-5 col-4">
+          <label class="mb-1 subtitle" for="">Helyszín*</label>
           <input
             name="location"
             [(ngModel)]="observation.location"
             type="text"
-            class="form-control"
+            class="form-control shadow"
             required
           />
         </div>
 
-        <h4 class="mt-5">Megfigyelt növény</h4>
+        <label class="mt-5 subtitle" for="">Megfigyelt növény*</label>
 
-        <h5>Fák</h5>
-        <div class="row row-cols-3 row-cols-md-6 g-3 mt-3 text-dark">
+        <h5 class="mt-4 ms-5">Fák</h5>
+        <div class="row row-cols-3 row-cols-md-6 g-3 my-2 ms-5 text-dark">
           <div class="col" *ngFor="let plant of trees">
-            <div class="card h-100 shadow hovered" (click)="setPlant(plant)">
+            <div
+              class="card h-100 shadow hovered"
+              [ngClass]="{ highlighted: plant === selectedPlant }"
+              (click)="setPlant(plant)"
+            >
               <img [src]="plant.image[0]" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h6 class="card-title fw-bold">{{ plant.name }}</h6>
@@ -40,10 +45,14 @@
           </div>
         </div>
 
-        <h5>Cserjék</h5>
-        <div class="row row-cols-3 row-cols-md-6 g-3 mt-3 text-dark">
+        <h5 class="mt-5 ms-5">Cserjék</h5>
+        <div class="row row-cols-3 row-cols-md-6 g-3 my-2 ms-5 text-dark">
           <div class="col" *ngFor="let plant of shrub">
-            <div class="card h-100 shadow hovered" (click)="setPlant(plant)">
+            <div
+              class="card h-100 shadow hovered"
+              [ngClass]="{ highlighted: plant === selectedPlant }"
+              (click)="setPlant(plant)"
+            >
               <img [src]="plant.image[0]" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h6 class="card-title fw-bold">{{ plant.name }}</h6>
@@ -53,10 +62,14 @@
           </div>
         </div>
 
-        <h5>Lágyszárúak</h5>
-        <div class="row row-cols-3 row-cols-md-6 g-3 mt-3 text-dark">
+        <h5 class="mt-5 ms-5">Lágyszárúak</h5>
+        <div class="row row-cols-3 row-cols-md-6 g-3 my-2 ms-5 text-dark">
           <div class="col" *ngFor="let plant of herbaceous">
-            <div class="card h-100 shadow hovered" (click)="setPlant(plant)">
+            <div
+              class="card h-100 shadow hovered"
+              [ngClass]="{ highlighted: plant === selectedPlant }"
+              (click)="setPlant(plant)"
+            >
               <img [src]="plant.image[0]" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h6 class="card-title fw-bold">{{ plant.name }}</h6>
@@ -69,57 +82,63 @@
         <!--<button class="m-5">Más növény</button>-->
 
         <div *ngIf="observation.plant._id" class="form-group mt-3">
-          <!-- <div class="d-flex justify-content-between">
-          <label for="">Fenológiai fázis</label>
-        </div> -->
-          <h4 class="mt-5 mb-3">Fenológiai fázis</h4>
-          <!-- <div *ngFor="let phase of observation.plant.phase">
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-            <label class="form-check-label" for="inlineRadio1">{{phase}}</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input type="radio" class="btn-check" name="options" id="option2" autocomplete="off">
-            <label class="btn btn-secondary" for="option2">{{phase}}</label>
-          </div>
-        </div> -->
+          <label class="mt-5 mb-1 subtitle" for="">Fenológiai fázis*</label>
+          <br />
 
-          <div
-            *ngFor="let phase of selectedPlant.phase"
-            class="btn-group m-2 mb-5"
-            (click)="setPhase(phase)"
-            role="group"
-            aria-label=""
-          >
-            <input
-              type="radio"
-              class="btn-check"
-              name="btnradio"
-              [id]="phase"
-              autocomplete="off"
-              required
-            />
-            <label class="btn btn-outline-light" [for]="phase">{{
-              phase
-            }}</label>
+          <div *ngFor="let phase of selectedPlant.phase" class="">
+            <div
+              class="my-3 ms-5"
+              (click)="setPhase(phase)"
+              role="group"
+              aria-label=""
+            >
+              <input
+                type="radio"
+                class=""
+                name="btnradio"
+                [id]="phase"
+                autocomplete="off"
+                required
+              />
+              <label class="btn" [for]="phase">{{ phase }}</label>
+            </div>
           </div>
 
           <!-- Uplaod photo -->
 
-          <div class="container">
-            <h3>Fénykép feltöltés</h3>
+          <div class="mt-5">
+            <label class="subtitle" for="">Fénykép feltöltés</label>
+            <p class="my-2">
+              Egymás után több kép is feltölthető, melyek automatikusan
+              optimális méretűre állítunk be.
+              Ha van az eszköznek kamerája, lehet azt is használni,
+              akár több kép is készíthető. A kiválasztás után a képek
+              megjelennek, ellenőrizhetőek, a kiválasztás vissza is
+              vonható.
+              A megfigyelés adatai és fényképei csak a "Megfigyelés rögzítése"
+              után kerülnek mentésre.
+            </p>
+
+            <!-- --------------- webcam -->
+            <app-camera
+              (getPicture)="handleImage($event)"
+              name="webcamImage"
+            ></app-camera>
+            <div class="webcam-image" *ngIf="webcamImage">
+              <img [src]="webcamImage.imageAsDataUrl" />
+            </div>
 
             <form [formGroup]="fileUploadForm">
               <div class="row">
                 <div class="col-sm-12">
-                  <div>
+                  <div class="ms-5">
                     <h6 class="head-title margin-top-8">
                       <span>Válassz fényképet!</span>
                     </h6>
                   </div>
                 </div>
                 <div class="col-sm-6">
-                  <div class="custom-file">
+                  <div class="custom-file ms-5 mt-3">
                     <label for="image-inpit" class="custom-file-upload">
                       Tallózás
                     </label>
@@ -133,6 +152,7 @@
                       #UploadFileInput
                       multiple
                     />
+                    <!--
                     <div class="row">
                       <div
                         *ngFor="let selectedFile of compressedFiles"
@@ -141,17 +161,9 @@
                         <img [src]="selectedFile" width="150" />
                       </div>
                     </div>
+                    -->
                   </div>
                 </div>
-              </div>
-
-              <!-- --------------- webcam -->
-              <app-camera
-                (getPicture)="handleImage($event)"
-                name="webcamImage"
-              ></app-camera>
-              <div class="webcam-image" *ngIf="webcamImage">
-                <img [src]="webcamImage.imageAsDataUrl" />
               </div>
 
               <br />
@@ -179,7 +191,7 @@
 
         <div class="form-group mt-3">
           <div class="d-flex justify-content-between">
-            <label for="">Megjegyzés</label>
+            <label class="mt-5 mb-2 subtitle" for="">Megjegyzés</label>
             <div
               [hidden]="observationForm.controls.note?.valid"
               class="error-message mt-1"
@@ -198,14 +210,23 @@
 
         <!-- {{ observation | json }} -->
 
+        <p class="my-5">
+          A *-gal jelölt mezők megadása nélkül nem értelmezhető a
+          megfigyelés, ezért azok kitöltése kötelező.
+        </p>
+
         <button
-          class="btn btn-primary"
-          [disabled]="observationForm.invalid || observation.phase==='' "
+          class="btn btn-outline-success mt-5"
+          [disabled]="observationForm.invalid || observation.phase === ''"
           type="submit"
         >
           Megfigyelés elküldése
         </button>
-        <p *ngIf="observationForm.invalid || observation.phase==='' ">Valami hiányzik a beviteli mezőkben: dátum, helyszín, növény, fenológiai fázis.</p>
+        <p *ngIf="observationForm.invalid || observation.phase === ''"
+        class = "text-danger">
+          Valami hiányzik a beviteli mezőkben: dátum, helyszín, növény,
+          fenológiai fázis.
+        </p>
       </form>
     </div>
   </div>
@@ -217,51 +238,3 @@
     <a routerLink="../login" class="btn btn-link">jelentkeznie</a>. Köszönjük.
   </h5>
 </div>
-
-<!--
-<div *ngIf="allUser$ | async as alluser" class="col-10 offset-1">
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Id</th>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Email</th>
-        <th>Password</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let user of alluser">
-        <td>{{ user._id }}</td>
-        <td>{{ user.firstName }}</td>
-        <td>{{ user.lastName }}</td>
-        <td>{{ user.email }}</td>
-        <td>{{ user.password }}</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-
-<div *ngIf="currentUser$ | async as user" class="col-10 offset-1">
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Id</th>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Email</th>
-        <th>Password</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>{{ user._id }}</td>
-        <td>{{ user.firstName }}</td>
-        <td>{{ user.lastName }}</td>
-        <td>{{ user.email }}</td>
-        <td>{{ user.password }}</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
--->
